<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tukenya Hub</string>
    <string name="prompt_email">Email</string>
    <string name="student_online_portal">Student Online Portal</string>
    <string name="user_photo">user_photo</string>
    <string name="sign_up">Sign Up</string>
    <string name="motto">Training For The Real World</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="RegistrationNumber" tools:ignore="MissingTranslation">Registration Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="sem_of_study">
        <item>Select One…</item>
        <item>SEM 1</item>
        <item>SEM 2</item>
        <item>TERM 1</item>
        <item>TERM 2</item>
        <item>TERM 3</item>
        <item>IBL 1</item>
        <item>IBL 2</item>
    </string-array>
    <string-array name="term_of_deferment">
        <item>Select One…</item>
        <item>2016/2017 | SEM 1</item>
        <item>2016/2017 | SEM 2</item>
        <item>2017/2018 | SEM 1</item>
        <item>2017/2018 | SEM 2</item>
        <item>2018/2019 | SEM 1</item>
        <item>2018/2019 | SEM 2</item>
        <item>2018/2019 | IBL 1</item>
        <item>2019/2020 | SEM 1</item>
        <item>2019/2020 | SEM 2</item>
        <item>2019/2020 | IBL 2</item>
        <item>2016/2017 | SEM 1</item>
        <item>2016/2017 | SEM 2</item>
        <item>2017/2018 | SEM 1</item>
        <item>2017/2018 | SEM 2</item>
        <item>2018/2019 | SEM 1</item>
        <item>2018/2019 | SEM 2</item>
        <item>2018/2019 | IBL 1</item>
        <item>2019/2020 | SEM 1</item>
        <item>2019/2020 | SEM 2</item>
        <item>2019/2020 | IBL 2</item>
        <item>2016/2017 | SEM 1</item>
        <item>2016/2017 | SEM 2</item>
        <item>2017/2018 | SEM 1</item>
        <item>2017/2018 | SEM 2</item>
        <item>2018/2019 | SEM 1</item>
        <item>2018/2019 | SEM 2</item>
        <item>2018/2019 | IBL 1</item>
        <item>2019/2020 | SEM 1</item>
        <item>2019/2020 | SEM 2</item>
        <item>2019/2020 | IBL 2</item>
    </string-array>
    <string-array name="year_of_study">
        <item>Select One…</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="tab_regExam">Registration</string>
    <string name="tab_provResults">Provisional</string>
    <string name="tab_examResults">Results</string>
    <string name="next">Next</string>
    <string name="start">Register</string>
    <string name="user_name">Name</string>


    <string name="all_permissions_denied_feedback">All those permissions are needed to register so please, allow them!</string>
    <string name="permission_rationale_title">Please Enable This Permissions</string>
    <string name="permission_rationale_message">This permission is needed to register so please, allow it!</string>
    <string name="permission_rationale_settings_button_text">SETTINGS</string>
    <string name="weak">WEAK</string>
    <string name="medium">MEDIUM</string>
    <string name="strong">STRONG</string>
    <string name="noColor">Empty</string>
    <string name="very_strong">VERY STRONG</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="academic_services">Academic\nServices</string>
    <string name="tab_text_1">CHATS</string>
    <string name="tab_text_2">CONTACTS</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="sign_out">Sign Out</string>

    <string name="Profile">Profile</string>
    <string name="AddContacts">Add Contacts</string>
    <!-- Strings used for fragments for navigation -->

    <!--dates-->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <string name="string_contact_list_activity_title">Contacts</string>
    <string name="string_conversation_list_activity_title">Conversations</string>
    <string name="string_create_group_activity_title">New Group</string>
    <string name="string_add_members_activity_title">Add members</string>

    <string name="label_no_conversation_error_title">No conversation!</string>
    <string name="label_no_conversation_error_subtitle">Press the below button to start a new chat!</string>

    <string name="action_create_group">Create group</string>

    <!--create_group_activity-->
    <string name="activity_new_group_icon_label">Add\nphoto</string>
    <string name="activity_new_group_group_name_hint_label">Set a group name</string>
    <string name="menu_activity_new_group_action_next">Next</string>

    <!--add_members_activity-->
    <string name="add_members_activity_contact_not_added_label">contact is not present in the list</string>
    <string name="activity_add_member_to_chat_group_selected_contacts_title">Selected contacts</string>
    <string name="menu_add_members_action_next">Next</string>

    <!--activity contact list -->
    <string name="label_no_contacts_error_title">No contact found</string>
    <string name="label_no_contacts_error_subtitle">Change the search parameters</string>
    <string name="activity_contact_list_error_cannot_create_group_offline_label">You can not create the group if you are offline</string>

    <!--activity_group_admin_panel-->
    <string name="activity_group_admin_panel_members_label">Members</string>
    <string name="activity_group_admin_panel_group_admin_label">Admin</string>
    <string name="activity_group_admin_panel_created_by_label">Created by </string>
    <string name="activity_group_admin_panel_created_on_label">Created on </string>
    <string name="activity_group_admin_panel_not_available_members_label">Information about members are now unavailable</string>
    <string name="activity_group_admin_panel_add_member_title">Add member</string>
    <string name="menu_activity_group_admin_panel_activity_cannot_add_member_offline">Cannot add a member if you are offline</string>

    <!--fragment_bottom_sheet_group_admin_panel_member-->
    <string name="bottom_sheet_group_admin_panel_member_remove_member_btn_label">Remove member</string>
    <string name="bottom_sheet_group_admin_panel_member_leave_group_btn_label">Leave group</string>
    <string name="bottom_sheet_group_admin_panel_member_see_profile_btn_label">See profile</string>
    <string name="bottom_sheet_group_admin_panel_member_send_message_btn_label">Send message</string>
    <string name="bottom_sheet_group_admin_panel_member_btn_cancel_label">Cancel</string>

    <!--activity_conversation_list-->
    <string name="activity_conversation_list_adapter_you_label">You</string>

    <!--fragment_conversation_list-->
    <string name="fragment_conversation_list_my_group_label">Groups</string>

    <!--fragment_bottom_sheet_group_admin_panel_member-->
    <string name="bottom_sheet_group_admin_panel_member_remove_member_alert_title">Remove member</string>
    <string name="bottom_sheet_group_admin_panel_member_remove_member_alert_message">Do you really want to remove <b>%1$s</b> from the group?</string>
    <string name="bottom_sheet_group_admin_panel_member_leave_group_alert_message">Do you really want to leave the group</string>
    <string name="bottom_sheet_group_admin_panel_member_remove_member_alert_positive_click">Remove</string>
    <string name="bottom_sheet_group_admin_panel_member_leave_group_alert_positive_click">Leave</string>
    <string name="bottom_sheet_group_admin_panel_member_remove_member_alert_negative_click">Cancel</string>

    <!--activity_message_list-->
    <string name="activity_message_list_group_info_you_label">You</string>
    <string name="activity_message_list_convers_with_presence_online">Online</string>
    <string name="activity_message_list_convers_with_presence_offline">Offline</string>
    <string name="activity_message_list_progress_dialog_upload">Upload in progress..</string>
    <string name="activity_message_list_progress_dialog_upload_failed">Cannot complete the upload</string>
    <string name="activity_message_list_no_message_error_title_label">You have been removed from the group</string>
    <string name="activity_message_list_no_message_error_subtitle_label">Contact the administrator for more details</string>
    <string name="activity_message_list_confirm_dialog_upload_title_label">Send image</string>
    <string name="activity_message_list_confirm_dialog_upload_message_label">Do you want to send this image?</string>
    <string name="activity_message_list_type_image_label">image</string>
    <string name="activity_message_list_type_file_label">file</string>

    <!--fragment_bottom_sheet_attach-->
    <string name="bottom_sheet_attach_images_label">Images</string>
    <string name="bottom_sheet_attach_documents_label">Documents</string>

    <!--activity_public_profile-->
    <string name="activity_public_profile_presence_online">Online</string>
    <string name="activity_public_profile_presence_offline">Offline</string>

    <!--activity_group_list-->
    <string name="activity_group_list_activity_title">My groups</string>
    <string name="activity_my_groups_list_error_title">No groups</string>
    <string name="activity_my_groups_list_error_subtitle">You are not a member of any group</string>

    <!--fragment_bottom_sheet_conversation_list-->
    <string name="bottom_sheet_conversation_list_confirm_delete_conversation_alert_title">Delete chat</string>
    <string name="bottom_sheet_conversation_list_confirm_delete_conversation_alert_message">Do you really want to delete the chat?\n The operation cannot be cancelled.</string>
    <string name="bottom_sheet_conversation_list_confirm_delete_conversation_button_label">Delete chat</string>
    <string name="bottom_sheet_conversation_list_confirm_delete_conversation_alert_positive_button_label">delete chat</string>
    <string name="bottom_sheet_conversation_list_confirm_delete_conversation_alert_positive_button_negative">cancel</string>

    <!--activity_chat_login-->
    <string name="activity_chat_login_no_account_label">No account?</string>
    <string name="activity_chat_login_signup_label">Sign up</string>

    <!--activity_choose_chat_group_activity-->

    <!--menu_fragment_conversations_list-->
    <string name="menu_fragment_conversations_list_action_archived">Archived</string>

    <!--activity_archived_conversation_list_title-->
    <string name="activity_archived_conversation_list_title">Archived</string>

    <!--row_archived_conversations-->
    <string name="row_archived_conversations_textview_reopen">Reopen</string>
    <string name="row_archived_conversations_closed_label">Closed</string>

    <string name="close">Close</string>
    <string name="unread">Unread</string>
    <string name="title_requests">Requests</string>
</resources>
